ci: add secret for the release pipe

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.TKIT_CI_PAT }}
       - name: Config git
         run: |
           git config --global --add safe.directory "${GITHUB_WORKSPACE}"
