--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
           java-version: ${{ inputs.java-version }}
           cache: 'maven'
       - name: Build project
-        run: mvn --batch-mode clean package
+        run: mvn --no-transfer-progress --batch-mode --errors clean package
