--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -18,8 +18,6 @@ jobs:
           git config --global --add safe.directory "${GITHUB_WORKSPACE}"
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      - uses: lorislab/install-samo-action@v2   
       - name: Create release
-        uses: lorislab/samo-action@v1.0.0
-        with:
-          entrypoint: samo
-          args: project release
+        run: samo project release
