--- a/.github/workflows/create-fix-branch.yml
+++ b/.github/workflows/create-fix-branch.yml
@@ -15,8 +15,6 @@ jobs:
           git config --global --add safe.directory "${GITHUB_WORKSPACE}"
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-      - name: Create release
-        uses: lorislab/samo-action@v1.0.0
-        with:
-          entrypoint: samo
-          args: project patch --tag ${{ github.ref_name }}
+      - uses: lorislab/install-samo-action@v2
+      - name: Create fix branch
+        run: samo project patch --tag ${{ github.ref_name }}
