--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -31,10 +31,11 @@ jobs:
       - name: Set project version
         run: mvn --no-transfer-progress --batch-mode --errors versions:set -DnewVersion=${{ github.ref_name }}
       - name: Deploy release
-        run: mvn --no-transfer-progress --batch-mode --errors deploy -DskipTests -Prelease
-      - name: Create release
-        uses: lorislab/changelog-action@v1.0.0
-        with:
-          args: generate --create-release --close-version --file .github/changelog.yaml
+        run: mvn --no-transfer-progress --batch-mode --errors deploy -DskipTests -Prelease        
+      - uses: lorislab/install-changelog-action@v1
+      - name: Create changelog
+        if: ${{ inputs.changelog }}        
+        run: changelog generate --create-release --close-version --file .github/changelog.yaml
         env:
           CHANGELOG_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
